# kuberos-nav-slam

./: .gitignore  README.md  entrypoint.sh  requirements.txt
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json  docker-compose.yml
containers/all_in_one/: Dockerfile  build.sh  run.sh
containers/gazebo_sim/: Dockerfile  build.sh  run.sh
containers/nav2_rtabmap/: Dockerfile  build.sh  run.sh
containers/nav2_stack/: Dockerfile  build.sh  run.sh
containers/nav_to_pose/: Dockerfile  build.sh  run.sh
containers/rosbag_recording/: Dockerfile  build.sh  run.sh
containers/rviz_viewer/: Dockerfile  build.sh  run.sh
deployments/batchjob_evaluation/: nav_simulation_batchjob_multi.yaml  nav_simulation_batchjob_one.yaml
deployments/deployment_with_simulation/: all_in_one.yaml  microservice-oriented.kuberos.yaml
docs/: dataset.md  using_devcontainer.md
evaluation/: localization_eval.py
src/create3_sim_extended/irobot_create_control/launch/include/: control.py
src/nav2_bringup_extended/: CMakeLists.txt  README.md  package.xml
src/nav2_bringup_extended/launch/: nav2_bringup_extended.launch.py
src/nav2_bringup_extended/launch/localization/: amcl_launch.py  groundtruth_sim_launch.py  rtabmap_launch.py  slamtoolbox_launch.py
src/nav2_bringup_extended/maps/maze/: map.yaml
src/nav2_bringup_extended/maps/tum/: map.pgm  map.yaml
src/nav2_bringup_extended/maps/warehouse/: map.yaml
src/nav_to_pose/: README.md  package.xml  setup.py
src/nav_to_pose/nav_to_pose/: nav_to_pose.py  nav_to_pose_w_delay.py  robot_navigator.py
src/pose_to_static_tf/: package.xml  setup.cfg  setup.py
src/pose_to_static_tf/pose_to_static_tf/: pose_to_static_tf_node.py
src/rgbd_tum_world_to_map_tf/: package.xml  setup.cfg  setup.py
src/rgbd_tum_world_to_map_tf/rgbd_tum_world_to_map_tf/: rgbd_tum_world_to_map_tf_node.py
src/rosbag_recording/: CMakeLists.txt  package.xml
src/rosbag_recording/launch/: rosbag_recording.launch.py
src/rosbag_recording/params/: params.yaml  rosbag_play.yaml
src/rosbag_recording/params/slamtoolbox/: mapper_params_online_sync.yaml
src/sim_data_publisher/: CMakeLists.txt  README.md  package.xml
src/sim_data_publisher/src/: sim_data_publisher.cpp
src/tb4_bringup/: CMakeLists.txt  README.md  package.xml
src/tb4_bringup/gui/: gui.config
src/tb4_bringup/launch/: ignition.launch.py  turtlebot4_ignition.launch.py  turtlebot4_spawn.launch.py
src/tb4_bringup/worlds/: maze2.sdf  warehouseD1.sdf  warehouseD2.sdf  warehouseD3.sdf  warehouseD4.sdf  warehouseD5.sdf  warehouseD6.sdf
src/tb4_nav2_utils/: CMakeLists.txt  README.md  package.xml
src/tb4_nav2_utils/config/: tb4_nav2_rviz.config.rviz
src/tb4_nav2_utils/launch/: rviz_launch.py
src/tf_to_pose/: README.md  package.xml  setup.cfg  setup.py
src/tf_to_pose/tf_to_pose/: tf_to_pose_node.py
src/utils/: check_ign_running.sh  start_sim_gui_vnc.sh  startx11_virtual.sh
