<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav_to_pose</name>
  <version>0.0.1</version>
  <description>nav2 nav to pose</description>
  <maintainer email="TODO@TODO.com">TODO</maintainer>
  <license>TODO</license>

  <exec_depend>nav2_simple_commander</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
