<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim_data_publisher</name>
  <version>0.0.0</version>
  <description>
    This package contains a node, that retrieves data from Gazebo and publishes it on ros topics
  </description>
  <maintainer email="TODO@TODO.com">todo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>ignition-fortress</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
